--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -14,7 +14,7 @@ tabs:
   categories: Categories
   tags: Tags
   archives: Archives
-  about: About
+  hack: Hack
 
 # the text displayed in the search bar & search results
 search:
